Add refuel management
